@@ -7,6 +7,7 @@ What's New for OpenJPEG
 
 October 6, 2011
 + [mickael] enhance html documentation generation with cmake and add a openjpeg mainpage to this doc
++ [mickael] enhance some new JPIP files with opj_config inclusion and using of opj_free/opj_calloc functions (credit to Julien Malik)
 
 October 1, 2011
 + [vincent] fix output when --disable-shared or --disable-static is passed to configure. Minor fix for jpwl compilation.
